# MCP

./: .env  MANIFEST.in  README.md  hello.py  meow.txt  pyproject.toml  trial.txt
FileSystem-MCP/: README.md  pyproject.toml
FileSystem-MCP/src/custom_mcp/: client.py
Weather-MCP/: pyproject.toml
Weather-MCP/src/weather-mcp/: weather.py
src/custom_mcp/: client.py  server.py
test_folder/: akshar.txt  cinderella.txt  test.txt
