[project]
name = "mcp-all"
version = "0.1.0"
description = "Install all sub-MCP packages together."
requires-python = ">=3.12"

dependencies = [
  # "filesystem-mcp" as a name, referencing the same Git repo but subdirectory
  "filesystem-mcp @ git+https://github.com/aumsathwara/MCP.git@multiple-mcps#subdirectory=FileSystem-MCP",
  # "weather-mcp" likewise
  "weather-mcp @ git+https://github.com/aumsathwara/MCP.git@multiple-mcps#subdirectory=Weather-MCP"
]
